# ozymandias

./: .gitignore  Makefile  README.md  cabal.project  cabal.project.freeze  ozymandias.cabal  pyproject.toml  site.yaml
content/: about.md  colophon.md  index.md  search.md
content/blog/: 2026-04-12-hello.md
content/essays/: feature-tour.md
content/fiction/: short-demo.md
content/music/: index.md
content/music/demo-piece/: index.md
content/poetry/: ozymandias.md
data/: bibliography.bib  chicago-notes.csl
static/css/: annotations.css  base.css  build.css  catalog.css  commonplace.css  components.css  gallery.css  home.css  images.css  layout.css  library.css  new.css  photography.css  popups.css  print.css  reading.css  score-reader.css  selection-popup.css  sidenotes.css  syntax.css  typography.css  viz.css
static/js/: annotations.js  citations.js  collapse.js  copy.js  gallery.js  katex-bootstrap.js  lightbox.js  nav.js  photography-map.js  photography-modes.js  popups.js  prism.min.js  random.js  reading.js  score-reader.js  search.js  selection-popup.js  semantic-search.js  settings.js  sidenotes.js  theme.js  toc.js  transclude.js  utils.js  viz.js
templates/: author-index.html  blog-index.html  blog-post.html  commonplace.html  composition.html  default.html  essay-index.html  essay.html  home.html  library.html  music-catalog.html  new.html  page.html  photography-by-year-index.html  photography-by-year.html  photography-contact-sheet.html  photography-index.html  photography-map.html  photography-series.html  photography.html  reading.html  score-reader-default.html  score-reader.html  tag-index.html
templates/partials/: footer.html  head.html  metadata.html  nav.html  page-footer.html  paginate-nav.html  photo-card.html
tools/: convert-images.sh  download-leaflet.sh  download-model.sh  download-pdfjs.sh  embed.py  extract-dimensions.py  extract-exif.py  extract-palette.py  import-photo.sh  leaflet-checksums.sha256  model-checksums.sha256  pdfjs-checksums.sha256  preset-signing-passphrase.sh  refreeze.sh  sign-site.sh  subset-fonts.sh  viz_theme.py
