cabal-version:      3.0
name:               ozymandias
version:            0.1.0.0
synopsis:           Static site builder for the Ozymandias template
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         you@example.com
build-type:         Simple

executable site
    main-is:          Main.hs
    hs-source-dirs:   build
    other-modules:
        Site
        Authors
        Catalog
        Commonplace
        Backlinks
        SimilarLinks
        Compilers
        Config
        Contexts
        Patterns
        Stats
        Stability
        Tags
        Pagination
        Citations
        Filters
        Filters.Typography
        Filters.Sidenotes
        Filters.Dropcaps
        Filters.Smallcaps
        Filters.Wikilinks
        Filters.Transclusion
        Filters.EmbedPdf
        Filters.Links
        Filters.Math
        Filters.Code
        Filters.Images
        Filters.Score
        Filters.Viz
        Utils
    build-depends:
        base                 >= 4.18  && < 5,
        hakyll               >= 4.16  && < 4.17,
        pandoc               >= 3.1   && < 3.7,
        pandoc-types         >= 1.23  && < 1.24,
        text                 >= 2.0   && < 2.2,
        containers           >= 0.6   && < 0.8,
        filepath             >= 1.4   && < 1.6,
        directory            >= 1.3   && < 1.4,
        time                 >= 1.12  && < 1.15,
        aeson                >= 2.1   && < 2.3,
        vector               >= 0.12  && < 0.14,
        yaml                 >= 0.11  && < 0.12,
        bytestring           >= 0.11  && < 0.13,
        process              >= 1.6   && < 1.7,
        data-default         >= 0.7   && < 0.8,
        mtl                  >= 2.3   && < 2.4,
        blaze-html           >= 0.9   && < 0.10,
        blaze-markup         >= 0.8   && < 0.9
    default-language:   GHC2021
    ghc-options:
        -threaded
        -Wall
